# BaseRender

./: readme.md
example/: CMakeLists.txt  example.cpp  phong.glsl
include/: Camera.hpp  CameraFPS.hpp  Input.hpp  LoadObj.hpp  Mesh.hpp  Object.hpp  Program.hpp  Scene.hpp  Shader.hpp  Window.hpp  window.hpp
src/: Camera.cpp  CameraFPS.cpp  Input.cpp  LoadObj.cpp  Mesh.cpp  Object.cpp  Program.cpp  Scene.cpp  Shader.cpp  Window.cpp
test/WindowTest/: CMakeLists.txt  test.cpp
